# iirbctf

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  docs.txt  index.rst  make.bat
iirbctf/data/: datasets.py
iirbctf/models/: img_text_composition_models.py  main.py  torch_functions.py
iirbctf/tests/: test_retrieval.py
models/: text_model.py  torch_functions.py
mqirtn/models/: img_text_composition_models.py  main.py  text_model.py  torch_functions.py
mqirtn/tests/: test_retrieval.py
notebooks/: content-based-image-retrieval-pytorch.ipynb  faster_rcnn_tf.ipynb  faster_rcnn_tf_bak.ipynb  faster_rcnn_torch.ipynb  faster_rcnn_torch.ipynb.bak  gru.ipynb  gru_tf.ipynb  gru_torch.ipynb  playground.ipynb  pytorch.ipynb  src.ipynb  tensorflow.ipynb  test.ipynb  test_retrieval.py
