[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iirbctf"
version = "0.0.1"
description = "Interactive Image Retrieval Based On Content And Textual Feedback"
authors = [
  { name = "SMB H" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "notebooks",
    "references",
    "models",
    "data",
]
ignore = [
    "E731",
    "E266",
    "E501",
    "C901",
    "W503",
]
